--- a/SN_Asier_1Galaxy.ipynb
+++ b/SN_Asier_1Galaxy.ipynb
@@ -2,108 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/_libs/__init__.py:4: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .tslib import iNaT, NaT, Timestamp, Timedelta, OutOfBoundsDatetime\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/__init__.py:26: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import (hashtable as _hashtable,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/dtypes/common.py:6: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos, lib\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/util/hashing.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import hashing, tslib\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/indexes/base.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import (lib, index as libindex, tslib as libts,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/tseries/offsets.py:21: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.tslibs.offsets as liboffsets\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/ops.py:13: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos as libalgos, ops as libops\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/indexes/interval.py:32: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs.interval import (\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/internals.py:14: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import internals as libinternals\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/sparse/array.py:33: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.sparse as splib\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/window.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.window as _window\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/groupby/groupby.py:68: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import (lib, reduction,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/reshape/reshape.py:30: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos as _algos, reshape as _reshape\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/io/parsers.py:45: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.parsers as parsers\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/io/pytables.py:50: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos, lib, writers as libwriters\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "importing Jupyter notebook from Pipe3D_Asier_Test.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/linalg/basic.py:17: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._solve_toeplitz import levinson\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/linalg/__init__.py:207: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._decomp_update import *\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/special/__init__.py:640: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._ufuncs import *\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/special/_ellip_harm.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._ellip_harm_2 import _ellipsoid, _ellipsoid_norm\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/_max_len_seq.py:8: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._max_len_seq_inner import _max_len_seq_inner\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/_upfirdn.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._upfirdn_apply import _output_len, _apply\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/lil.py:19: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _csparsetools\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:165: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._shortest_path import shortest_path, floyd_warshall, dijkstra,\\\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/_validation.py:5: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._tools import csgraph_to_dense, csgraph_from_dense,\\\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:167: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._traversal import breadth_first_order, depth_first_order, \\\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:169: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._min_spanning_tree import minimum_spanning_tree\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:170: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._reordering import reverse_cuthill_mckee, maximum_bipartite_matching, \\\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/optimize/_trlib/__init__.py:1: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._trlib import TRLIBQuadraticSubproblem\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/optimize/_numdiff.py:10: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._group_columns import group_dense, group_sparse\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/interpolate/_bsplines.py:10: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _bspl\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/__init__.py:95: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .ckdtree import *\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/__init__.py:96: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .qhull import *\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/_spherical_voronoi.py:18: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _voronoi\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/distance.py:122: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _hausdorff\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/ndimage/measurements.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _ni_label\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/spectral.py:10: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._spectral import _lombscargle\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/stats/_continuous_distns.py:18: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _stats\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/_peak_finding.py:13: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._peak_finding_utils import (_argmaxima1d, _select_by_peak_distance,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/table/np_utils.py:19: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _np_utils\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/io/ascii/fastbasic.py:9: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import cparser\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/main.py:21: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .cython_impl import lombscargle_cython\n"
      ]
     }
    ],
@@ -131,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "line = 'ASASSN13ch'"
@@ -140,11 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Amusing_Table.csv')  # To find the Galaxy data\n",
+    "df = pd.read_csv('Amusing_Table (copia).csv')  # To find the Galaxy data\n",
     "Names_1 = df['SN_name']\n",
     "Names_2 = df['def_name']\n",
     "R = 0\n",
@@ -177,8 +90,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(141, 122, 159, 163)\n"
+     ]
+    }
+   ],
+   "source": [
+    "RA_SN = df.at[Row,'RA_SN']\n",
+    "RA_SN = hms2deg(RA_SN)\n",
+    "\n",
+    "DEC_SN = df.at[Row,'DEC_SN']\n",
+    "DEC_SN = dms2deg(DEC_SN)\n",
+    "\n",
+    "RA_GAL = df.at[Row,'RA_GAL']\n",
+    "RA_GAL = hms2deg(RA_GAL)\n",
+    "\n",
+    "DEC_GAL = df.at[Row,'DEC_GAL']\n",
+    "DEC_GAL = dms2deg(DEC_GAL)\n",
+    "\n",
+    "w = WCS('../Data/Amusing/flux_elines.'+line+'.cube.fits')\n",
+    "Pix_X, Pix_Y ,z = w.wcs_world2pix(RA_SN, DEC_SN, 0. , 1)\n",
+    "Pix_X_GAL, Pix_Y_GAL ,z = w.wcs_world2pix(RA_GAL, DEC_GAL, 0. , 1)\n",
+    "\n",
+    "Pix_X = int(Pix_X)\n",
+    "Pix_Y = int(Pix_Y)\n",
+    "Pix_X_GAL = int(Pix_X_GAL)\n",
+    "Pix_Y_GAL = int(Pix_Y_GAL)\n",
+    "\n",
+    "print(Pix_X, Pix_Y, Pix_X_GAL, Pix_Y_GAL)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Call to Pipe3D code\n",
@@ -191,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -222,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -377,7 +337,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -391,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
