Solucionado el problema de las zonas y el mapa de flujo. Ya va rapido y funciona bien.

--- a/SN_Asier_DTDS.ipynb
+++ b/SN_Asier_DTDS.ipynb
@@ -52,13 +52,13 @@
    "outputs": [],
    "source": [
     "alfa = 1.0\n",
-    "delta = 0.0\n",
+    "delta = 500\n",
     "sigma = 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -88,7 +88,22 @@
      "output_type": "stream",
      "text": [
       "ASASSN13an\n",
-      "ASASSN13ch\n"
+      "ASASSN13ch\n",
+      "ASASSN13cj\n",
+      "ASASSN13cp\n",
+      "ASASSN13dm\n",
+      "ASASSN14at\n",
+      "ASASSN14ba\n",
+      "ASASSN14bf\n",
+      "ASASSN14co\n",
+      "ASASSN14cu\n",
+      "ASASSN14db\n",
+      "ASASSN14dz\n",
+      "ASASSN14hr\n",
+      "ASASSN14ig\n",
+      "ASASSN14ko\n",
+      "ASASSN14lt\n",
+      "ASASSN14lu\n"
      ]
     },
     {
@@ -98,9 +113,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-000b73c38faa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;31m# Obtain the maps of the galaxy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpainting_galaxy_maps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malfa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0;31m# Gaussian function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/asier/Escritorio/Tesis/Supernovas/Pipe3D_Asier_Test.ipynb\u001b[0m in \u001b[0;36mpainting_galaxy_maps\u001b[0;34m(self, stars_die, alfa, delta, sigma)\u001b[0m\n",
-      "\u001b[0;32m/home/asier/Escritorio/Tesis/Supernovas/Pipe3D_Asier_Test.ipynb\u001b[0m in \u001b[0;36mcumulative_surface_density_spaxel\u001b[0;34m(self, i, j, stars_die)\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-6948270db176>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0;31m# Gaussian convolve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmass_density_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmass_density_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgauss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m     \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSNII_rate_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSNII_rate_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgauss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m     \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSNIa_rate_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSNIa_rate_map\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgauss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.pyc\u001b[0m in \u001b[0;36mconvolve\u001b[0;34m(array, kernel, boundary, fill_value, normalize_kernel)\u001b[0m\n\u001b[1;32m    183\u001b[0m             result = convolve2d_boundary_fill(array_internal,\n\u001b[1;32m    184\u001b[0m                                               \u001b[0mkernel_internal\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m                                               float(fill_value))\n\u001b[0m\u001b[1;32m    186\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mboundary\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'wrap'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m             result = convolve2d_boundary_wrap(array_internal,\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -177,6 +191,7 @@
     "    gauss = Gaussian2DKernel(stddev)\n",
     "    \n",
     "    # Gaussian convolve\n",
+    "    line.mass_density_map = convolve(line.mass_density_map, gauss)\n",
     "    line.SNII_rate_map = convolve(line.SNII_rate_map, gauss)\n",
     "    line.SNIa_rate_map = convolve(line.SNIa_rate_map, gauss)\n",
     "    \n",
@@ -274,7 +289,67 @@
     "    np.savetxt('../Results_CC_'+str(sigma)+'.txt',data_CC)\n",
     "    \n",
     "    data_Ia = np.column_stack((All_SN_type,All_Prob_Ia,All_Cumul_Ia))\n",
-    "    np.savetxt('../Results_Ia_'+str(alfa)+'_'+str(delta)+'.txt',data_Ia)"
+    "    np.savetxt('../Results_Ia_'+str(alfa)+'_'+str(delta)+'.txt',data_Ia)\n",
+    "    \n",
+    "    # Mass density map\n",
+    "    plt.imshow(line.mass_density_map)\n",
+    "    plt.colorbar()\n",
+    "    plt.plot([Pix_X_GAL],[Pix_Y_GAL],'k+')\n",
+    "    plt.plot([Pix_X],[Pix_Y],'kx')\n",
+    "    plt.title('{}: Mass Density map (Mo/parsec**2)' .format(line.name))\n",
+    "    plt.savefig('../result/'+line.name+'_mass_density_map.png')\n",
+    "    #plt.show()\n",
+    "    plt.close()\n",
+    "\n",
+    "    # Log Mass density map\n",
+    "    plt.imshow(line.mass_density_map, norm=LogNorm())\n",
+    "    plt.colorbar()\n",
+    "    plt.plot([Pix_X_GAL],[Pix_Y_GAL],'k+')\n",
+    "    plt.plot([Pix_X],[Pix_Y],'kx')\n",
+    "    plt.title('{}: Log Mass Density map' .format(line.name))\n",
+    "    plt.savefig('../result/'+line.name+'_mass_density_map_Log.png')\n",
+    "    #plt.show()\n",
+    "    plt.close()\n",
+    "    \n",
+    "        # Log SN II rate map\n",
+    "    plt.imshow(line.SNII_rate_map, norm=LogNorm(), vmin=1e-8, vmax=1e-4)\n",
+    "    plt.colorbar()\n",
+    "    plt.plot([Pix_X_GAL],[Pix_Y_GAL],'k+')\n",
+    "    plt.plot([Pix_X],[Pix_Y],'kx')\n",
+    "    plt.title('{}: Log star formation rate map' .format(line.name))\n",
+    "    plt.savefig('../result/'+line.name+'_SNII_map_Log.png')\n",
+    "    #plt.show()\n",
+    "    plt.close()\n",
+    "    \n",
+    "        # SN II P map\n",
+    "    plt.imshow(line.cumulative_SNII_rate_map, vmin=0, vmax=1)\n",
+    "    plt.colorbar()\n",
+    "    plt.plot([Pix_X_GAL],[Pix_Y_GAL],'k+')\n",
+    "    plt.plot([Pix_X],[Pix_Y],'kx')\n",
+    "    plt.title('{}: star formation rate P map' .format(line.name))\n",
+    "    plt.savefig('../result/'+line.name+'_P_Map_II.png')\n",
+    "    #plt.show()\n",
+    "    plt.close()\n",
+    "    \n",
+    "        # Log SN Ia Rate Map\n",
+    "    plt.imshow(line.SNIa_rate_map, norm=LogNorm(), vmin=1e-8, vmax=1e-4)\n",
+    "    plt.colorbar()\n",
+    "    plt.plot([Pix_X_GAL],[Pix_Y_GAL],'k+')\n",
+    "    plt.plot([Pix_X],[Pix_Y],'kx')\n",
+    "    plt.title('{}: Log SN Ia rate map' .format(line.name))\n",
+    "    plt.savefig('../result/'+line.name+'_SNIa_map_Log.png')\n",
+    "    #plt.show()\n",
+    "    plt.close()\n",
+    "    \n",
+    "        # SN Ia P map\n",
+    "    plt.imshow(line.cumulative_SNIa_rate_map, vmin=0, vmax=1)\n",
+    "    plt.colorbar()\n",
+    "    plt.plot([Pix_X_GAL],[Pix_Y_GAL],'k+')\n",
+    "    plt.plot([Pix_X],[Pix_Y],'kx')\n",
+    "    plt.title('{}: SN Ia rate P map' .format(line.name))\n",
+    "    plt.savefig('../result/'+line.name+'_P_Map_Ia.png')\n",
+    "    #plt.show()\n",
+    "    plt.close()"
    ]
   }
  ],
