--- a/SN_Asier_DTD_II.ipynb
+++ b/SN_Asier_DTD_II.ipynb
@@ -69,7 +69,21 @@
      "output_type": "stream",
      "text": [
       "0.1\n",
-      "ASASSN13an\n",
+      "ASASSN13an\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/asier/anaconda2/lib/python2.7/site-packages/ipykernel/__main__.py:125: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/ipykernel/__main__.py:127: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ASASSN13ch\n",
       "ASASSN13cj\n",
       "ASASSN13cp\n",
@@ -157,379 +171,19 @@
       "ASASSN14lt\n",
       "ASASSN14lu\n",
       "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "50\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "75\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "100\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "150\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "200\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "500\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n"
+      "ASASSN15aj\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-6eda867154a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[0;31m# Obtain the maps of the galaxy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m         \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpainting_galaxy_maps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malfa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0;31m# Gaussian function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/asier/Escritorio/Tesis/Supernovas/Pipe3D_Asier_Test_II.ipynb\u001b[0m in \u001b[0;36mpainting_galaxy_maps\u001b[0;34m(self, stars_die, alfa, delta, sigma)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -591,6 +245,15 @@
     "        # Integer for measure\n",
     "        Pix_X = int(Pix_X)\n",
     "        Pix_Y = int(Pix_Y)\n",
+    "        \n",
+    "        #$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$\n",
+    "        # Pixel de la SN\n",
+    "        Pix_X = df.at[Row,'SNX'] -1\n",
+    "        Pix_Y = df.at[Row,'SNY'] -1\n",
+    "        # Pixel del centro de la Galaxia\n",
+    "        Pix_X_GAL = df.at[Row,'GALX'] -1\n",
+    "        Pix_Y_GAL = df.at[Row,'GALY'] -1\n",
+    "        #$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$\n",
     "\n",
     "        # Supernova type\n",
     "        if df.at[Row,'SN_type'] == 'Ia':\n",
@@ -665,7 +328,7 @@
     "        All_Cumul_II[Galaxy] = line.Cumulative_Prob_SNII\n",
     "\n",
     "        data_II = np.column_stack((All_SN_type,All_Prob_II,All_Cumul_II))\n",
-    "        np.savetxt('../Results_CC_'+str(sigma)+'.txt',data_II)"
+    "        np.savetxt('../Results_CC_'+str(sigma)+'.coordenadas.txt',data_II)"
    ]
   }
  ],
