--- a/SN_Asier_DTD_II.ipynb
+++ b/SN_Asier_DTD_II.ipynb
@@ -3,15 +3,107 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/_libs/__init__.py:4: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .tslib import iNaT, NaT, Timestamp, Timedelta, OutOfBoundsDatetime\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/__init__.py:26: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import (hashtable as _hashtable,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/dtypes/common.py:6: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos, lib\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/util/hashing.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import hashing, tslib\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/indexes/base.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import (lib, index as libindex, tslib as libts,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/tseries/offsets.py:21: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.tslibs.offsets as liboffsets\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/ops.py:13: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos as libalgos, ops as libops\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/indexes/interval.py:32: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs.interval import (\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/internals.py:14: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import internals as libinternals\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/sparse/array.py:33: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.sparse as splib\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/window.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.window as _window\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/groupby/groupby.py:68: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import (lib, reduction,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/core/reshape/reshape.py:30: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos as _algos, reshape as _reshape\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/io/parsers.py:45: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.parsers as parsers\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/pandas/io/pytables.py:50: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos, lib, writers as libwriters\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "importing Jupyter notebook from Pipe3D_Asier_Test_II.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/linalg/basic.py:17: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._solve_toeplitz import levinson\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/linalg/__init__.py:207: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._decomp_update import *\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/special/__init__.py:640: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._ufuncs import *\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/special/_ellip_harm.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._ellip_harm_2 import _ellipsoid, _ellipsoid_norm\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/_max_len_seq.py:8: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._max_len_seq_inner import _max_len_seq_inner\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/_upfirdn.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._upfirdn_apply import _output_len, _apply\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/lil.py:19: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _csparsetools\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:165: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._shortest_path import shortest_path, floyd_warshall, dijkstra,\\\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/_validation.py:5: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._tools import csgraph_to_dense, csgraph_from_dense,\\\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:167: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._traversal import breadth_first_order, depth_first_order, \\\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:169: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._min_spanning_tree import minimum_spanning_tree\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/sparse/csgraph/__init__.py:170: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._reordering import reverse_cuthill_mckee, maximum_bipartite_matching, \\\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/optimize/_trlib/__init__.py:1: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._trlib import TRLIBQuadraticSubproblem\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/optimize/_numdiff.py:10: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._group_columns import group_dense, group_sparse\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/interpolate/_bsplines.py:10: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _bspl\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/__init__.py:95: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .ckdtree import *\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/__init__.py:96: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .qhull import *\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/_spherical_voronoi.py:18: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _voronoi\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/spatial/distance.py:122: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _hausdorff\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/ndimage/measurements.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _ni_label\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/spectral.py:10: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._spectral import _lombscargle\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/stats/_continuous_distns.py:18: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _stats\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/scipy/signal/_peak_finding.py:13: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from ._peak_finding_utils import (_argmaxima1d, _select_by_peak_distance,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/table/np_utils.py:19: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _np_utils\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/io/ascii/fastbasic.py:9: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import cparser\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/main.py:21: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .cython_impl import lombscargle_cython\n"
      ]
     }
    ],
@@ -46,29 +138,45 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "alfa = 1.0\n",
     "delta = 0.0\n",
-    "width = [500,750,999]"
+    "width = [10,20,30,40,50,60,70,80,90,100,125,150]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500\n",
-      "ASASSN13an\n",
+      "10\n",
+      "ASASSN13an\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:108: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .boundary_none import (convolve1d_boundary_none,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:112: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .boundary_extend import (convolve1d_boundary_extend,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:116: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .boundary_fill import (convolve1d_boundary_fill,\n",
+      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:120: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .boundary_wrap import (convolve1d_boundary_wrap,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ASASSN13ch\n",
       "ASASSN13cj\n",
       "ASASSN13cp\n",
@@ -113,140 +221,7 @@
       "SN2005ag\n",
       "SN2005bg\n",
       "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "750\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n",
-      "SN2006os\n",
-      "SN2006ot\n",
-      "SN2007al\n",
-      "SN2007ba\n",
-      "SN2007bc\n",
-      "SN2007cg\n",
-      "SN2007hj\n",
-      "SN2007ol\n",
-      "SN2009bb\n",
-      "SN2009I\n",
-      "SN2010F\n",
-      "SN2012gm\n",
-      "SN2012ho\n",
-      "SN2014cd\n",
-      "999\n",
-      "ASASSN13an\n",
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n",
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n",
-      "SN2005M\n",
-      "SN2005na\n",
-      "SN2006br\n",
-      "SN2006D\n",
-      "SN2006ej\n",
-      "SN2006et\n",
-      "SN2006hx\n",
-      "SN2006lu\n",
-      "SN2006my\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-24c692bb6880>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# Obtain the maps of the galaxy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m         \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpainting_galaxy_maps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malfa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0;31m# Gaussian function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/asier/Escritorio/Tesis/Supernovas/Pipe3D_Asier_Test_II.ipynb\u001b[0m in \u001b[0;36mpainting_galaxy_maps\u001b[0;34m(self, stars_die, alfa, delta, sigma)\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "SN2005ku\n"
      ]
     }
    ],
@@ -328,7 +303,7 @@
     "        line.painting_galaxy_maps(False, alfa, delta, sigma)\n",
     "\n",
     "        # Gaussian function\n",
-    "        stddev = 7\n",
+    "        stddev = 10\n",
     "        gauss = Gaussian2DKernel(stddev)\n",
     "\n",
     "        # Gaussian convolve\n",
@@ -389,7 +364,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -403,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
