Ultimos cambios de hacer pruebas.

--- a/SN_Asier_DTD_Ha.ipynb
+++ b/SN_Asier_DTD_Ha.ipynb
@@ -177,23 +177,7 @@
       "ASASSN14co\n",
       "ASASSN14cu\n",
       "ASASSN14db\n",
-      "ASASSN14dz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/asier/.local/lib/python2.7/site-packages/numpy/lib/nanfunctions.py:1545: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
-      "  keepdims=keepdims)\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:91: RuntimeWarning: invalid value encountered in less\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:92: RuntimeWarning: invalid value encountered in less\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ASASSN14dz\n",
       "ASASSN14hr\n",
       "ASASSN14ig\n",
       "ASASSN14ko\n",
@@ -305,7 +289,7 @@
     "    w = WCS('../Data/Amusing/flux_elines.'+line+'.cube.fits')\n",
     "    Pix_X, Pix_Y ,z = w.wcs_world2pix(RA_SN, DEC_SN, 0. , 0,ra_dec_order=True)\n",
     "    Pix_X_GAL, Pix_Y_GAL ,z = w.wcs_world2pix(RA_GAL, DEC_GAL, 0. , 0,ra_dec_order=True)\n",
-    "    \n",
+    "\n",
     "    # Integer for measure\n",
     "    Pix_X = int(Pix_X)\n",
     "    Pix_Y = int(Pix_Y)\n",
@@ -330,7 +314,7 @@
     "    line.Ha_Map = hdulist[0].data[20]\n",
     "\n",
     "    # Gaussian function\n",
-    "    stddev = 10\n",
+    "    stddev = 7\n",
     "    gauss = Gaussian2DKernel(stddev)\n",
     "\n",
     "    # Gaussian convolve\n",
