--- a/SN_Asier_DTD_II.ipynb
+++ b/SN_Asier_DTD_II.ipynb
@@ -143,12 +143,12 @@
    "source": [
     "alfa = 1.0\n",
     "delta = 0.0\n",
-    "width = [10,20,30,40,50,60,70,80,90,100,125,150]"
+    "width = [10,20,30,40,50,60,70,80,90,100,125,150,200]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,68 +160,15 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:108: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .boundary_none import (convolve1d_boundary_none,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:112: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .boundary_extend import (convolve1d_boundary_extend,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:116: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .boundary_fill import (convolve1d_boundary_fill,\n",
-      "/home/asier/anaconda2/lib/python2.7/site-packages/astropy/convolution/convolve.py:120: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .boundary_wrap import (convolve1d_boundary_wrap,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ASASSN13ch\n",
-      "ASASSN13cj\n",
-      "ASASSN13cp\n",
-      "ASASSN13dm\n",
-      "ASASSN14at\n",
-      "ASASSN14ba\n",
-      "ASASSN14bf\n",
-      "ASASSN14co\n",
-      "ASASSN14cu\n",
-      "ASASSN14db\n",
-      "ASASSN14dz\n",
-      "ASASSN14hr\n",
-      "ASASSN14ig\n",
-      "ASASSN14ko\n",
-      "ASASSN14lt\n",
-      "ASASSN14lu\n",
-      "ASASSN14lv\n",
-      "ASASSN15aj\n",
-      "CSP14aaq\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: FITSFixedWarning: CDELT3 = '' \n",
-      "a floating-point value was expected. [astropy.wcs.wcs]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SN1970A\n",
-      "SN1985G\n",
-      "SN1990Q\n",
-      "SN1997dn\n",
-      "SN1998bw\n",
-      "SN2001fv\n",
-      "SN2004ef\n",
-      "SN2004gs\n",
-      "SN2005ag\n",
-      "SN2005bg\n",
-      "SN2005hc\n",
-      "SN2005ku\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-12046e658b9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# Obtain the maps of the galaxy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m         \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpainting_galaxy_maps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malfa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0;31m# Gaussian function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/asier/Escritorio/Tesis/Supernovas/Pipe3D_Asier_Test_II.ipynb\u001b[0m in \u001b[0;36mpainting_galaxy_maps\u001b[0;34m(self, stars_die, alfa, delta, sigma)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -277,8 +224,8 @@
     "\n",
     "        # Pixel position\n",
     "        w = WCS('../Data/Amusing/flux_elines.'+line+'.cube.fits')\n",
-    "        Pix_X, Pix_Y ,z = w.wcs_world2pix(RA_SN, DEC_SN, 0. , 1)\n",
-    "        Pix_X_GAL, Pix_Y_GAL ,z = w.wcs_world2pix(RA_GAL, DEC_GAL, 0. , 1)\n",
+    "        Pix_X, Pix_Y ,z = w.wcs_world2pix(RA_SN, DEC_SN, 0. , 0,ra_dec_order=True)\n",
+    "        Pix_X_GAL, Pix_Y_GAL ,z = w.wcs_world2pix(RA_GAL, DEC_GAL, 0. , 0,ra_dec_order=True)\n",
     "\n",
     "        # Integer for measure\n",
     "        Pix_X = int(Pix_X)\n",
@@ -303,7 +250,7 @@
     "        line.painting_galaxy_maps(False, alfa, delta, sigma)\n",
     "\n",
     "        # Gaussian function\n",
-    "        stddev = 10\n",
+    "        stddev = 7\n",
     "        gauss = Gaussian2DKernel(stddev)\n",
     "\n",
     "        # Gaussian convolve\n",
